--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                 <h5>5. Squirrel</h5>
                 <img style="width: 250px ;height: 250px;" src="./images/img5.jpg" alt="Image5">
                 <ol>
-                    <li style="color:orange">A beautiful image of Squirrel</li>
-                    <li style="color:orange">Image captured by photographer</li>
-                    <li style="color:orange">Beautiful animal and surroundings</li>  
+                    <li>A beautiful image of Squirrel</li>
+                    <li>Image captured by photographer</li>
+                    <li>Beautiful animal and surroundings</li>  
                 </ol>
             </div>
         </div>
